Upgrade BouncyCastle