@@ -7,6 +7,9 @@ import java.net.URLEncoder;
 import java.security.Principal;
 import java.util.Vector;
 
+import org.bouncycastle.asn1.x500.RDN;
+import org.bouncycastle.asn1.x500.X500Name;
+import org.bouncycastle.asn1.x500.style.RFC4519Style;
 import org.bouncycastle.asn1.x509.X509Name;
 import org.mortbay.jetty.Request;
 import org.mortbay.jetty.security.UserRealm;
@@ -42,12 +45,21 @@ public class SeyconUserRealm implements UserRealm {
 
     public Principal getPrincipal(String username) {
         try {
-			X509Name name = new X509Name (username);
-			Vector v = name.getValues(X509Name.CN);
-			Vector v2 = name.getValues(X509Name.OU);
-			String userName = URLEncoder.encode(v.get(0).toString(), "UTF-8");
-			if (v2.size() > 0)
-				userName = URLEncoder.encode(v2.get(0).toString(), "UTF-8") + "\\" + userName;
+			X500Name name = new X500Name (username);
+			String domain = null;
+			String n = null;
+			for ( RDN rdn: name.getRDNs())
+			{
+				if (rdn.getFirst() != null &&
+						rdn.getFirst().getType().equals( RFC4519Style.o))
+					domain = rdn.getFirst().getValue().toString();
+				if (rdn.getFirst() != null &&
+						rdn.getFirst().getType().equals( RFC4519Style.cn))
+					n = rdn.getFirst().getValue().toString();
+			}
+			String userName = URLEncoder.encode(n, "UTF-8");
+			if (domain != null)
+				userName = URLEncoder.encode(domain, "UTF-8") + "\\" + userName;
 			return new SimplePrincipal (userName);
 		} catch (UnsupportedEncodingException e) {
 			throw new RuntimeException(e);
